############################################## -*- mode:makefile; -*- ####
##									##
##  Project:	DrawView - Examples					##
##  SCCS:	<@(#) Makefile.am 1.1>					##
##  Edit:	18-Jan-06						##
##									##
##########################################################################
##									##
##  Automake template makefile for the example files.			##
##									##
##########################################################################
##									##
##  Copyright (c) 2006 Jonathan Marten <jjm@keelhaul.demon.co.uk>	##
##  Home & download:  http://www.keelhaul.demon.co.uk/acorn/drawview/	##
##									##
##  This program is free software; you can redistribute it and/or	##
##  modify it under the terms of the GNU General Public License as	##
##  published by the Free Software Foundation; either version 2 of	##
##  the License, or (at your option) any later version.			##
##									##
##  It is distributed in the hope that it will be useful, but		##
##  WITHOUT ANY WARRANTY; without even the implied warranty of		##
##  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the	##
##  GNU General Public License for more details.			##
##									##
##  You should have received a copy of the GNU General Public		##
##  License along with this program; see the file COPYING for further	##
##  details.  If not, write to the Free Software Foundation, Inc.,	##
##  59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.		##
##									##
##########################################################################

examplesdir =			$(pkgdatadir)/examples

dist_examples_DATA =		README							\
				Ttnkhamun.c56 Metro.c56 6ominoes.aff Viking.c56		\
				Backdrop.aff Barcelona.c56 brainVmind.c56		\
				compass.c56 Spitfire.c4b Hurricane.c4b Coupons.c56	\
				impossible.aff MultiPlay.c4b GraphicEq.c4b		\
				AllCaps.vec AllJoins.vec
